# ytd

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: auth.py  config.py  db.py  downloader.py  main.py
app/templates/: _jobs.html  index.html
deploy/: deploy.sh  nginx.conf
tests/: conftest.py  test_api.py
ytd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
