[project]
name = "ytd"
version = "0.1.0"
description = "Minimal open-source YouTube download manager."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "yt-dlp>=2024.10.7",
    "jinja2>=3.1",
    "bcrypt>=4.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
